# casestudypilot

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING_SUMMARY.md  casestudypilot-config.json  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: case-study-request.yml  config.yml  content-request.yml  epic.yml  generate-case-study.yml  generate-presenter-profile.yml  generate-reference-architecture.yml  organization-request.yml
.github/agents/: case-study-agent.md  content-orchestrator.md  people-agent.md  reference-architecture-agent.md
.github/workflows/: auto-assign-case-study.yml  copilot-setup-steps.yml  docker-publish.yml
.opencode/: config.json
case-studies/: airbnb.md  intuit.md  niantic.md  spark-on-kubernetes-a-practical-guide.md  spotify.md  supercharge-your-canary-deployments-with-argo-rollouts-step-plu-alexandre-gaudreault-zach-aller.md
casestudypilot/: __main__.py  hyperlinks.py  utils.py  validation.py
casestudypilot/tools/: assemble_reference_architecture.py  assembler.py  company_verifier.py  frame_extractor.py  github_client.py  issue_parser.py  multi_video_processor.py  presenter_search.py  profile_assembler.py  screenshot_extractor.py  update_readme_index.py  validate_deep_analysis.py  validate_reference_architecture.py  validate_screenshots.py  validator.py  youtube_client.py
docs/: API-KEY-DECISION.md  CASE-STUDY-VS-REFERENCE-ARCHITECTURE.md  CONSTRAINTS.md  CONTAINER-QUICK-START.md  GITHUB-ISSUE-WORKFLOW.md  HYPERLINK-PRESERVATION.md  IMPLEMENTATION-GUIDE.md  INTEGRATION-TEST-PLAN.md  LIVE-TEST-RESULTS-2026-02-10.md  PLANNING.md  REFERENCE-ARCHITECTURE-IMPLEMENTATION-GUIDE.md  REFERENCE-ARCHITECTURE-IMPLEMENTATION-PLAN.md  REFERENCE-ARCHITECTURE-README.md  REFERENCE-ARCHITECTURE-USER-GUIDE.md  SCREENSHOT-IMPLEMENTATION-SUMMARY.md  SCREENSHOT-INTEGRATION-PLAN.md  containerization-strategy.md  implementation-status.md  postmortem-pr33-mixed-content.md  validation-workflow-updates.md
docs/archive/: 2026-02-09-design.md  README.md
docs/plans/: 2026-02-09-comprehensive-design.md  2026-02-09-design.md  2026-02-09-integrate-landscape-mcp-server.md  2026-02-09-python-design-m1-overview.md  2026-02-09-python-design-m2-components.md  2026-02-09-python-design-m3-implementation.md  2026-02-09-python-design-m4-deployment.md  (+4 more)
people/: jeefy.md
reference-architectures/: cern.md  the-hard-life-of-securing-a-particle-accelerator-antonio-nappi-sebastian-lopienski-cern.md
templates/: case_study.md.j2  presenter_profile.md.j2  reference_architecture.md.j2
tests/: test_assemble_reference_architecture.py  test_github_client.py  test_issue_parser.py  test_mcp_client.py  test_multi_video_processor.py  test_presenter_search.py  test_presenter_validators.py  test_profile_assembler.py  test_screenshot_extractor.py  test_validate_deep_analysis.py  test_validate_reference_architecture.py  test_validation.py
(+12 files in other folders)
