[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casestudypilot"
version = "2.2.0"
description = "Skill-driven LLM automation framework for generating CNCF case studies"
readme = "README.md"
authors = [
    {name = "Jorge Castro"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["llm", "automation", "github-copilot", "skills", "agents", "cncf", "case-studies"]
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.2.4",
    "rapidfuzz>=3.14.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.0",
    "typer>=0.18.0",
    "rich>=14.3.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/castrojo/casestudypilot"
Repository = "https://github.com/castrojo/casestudypilot"
Issues = "https://github.com/castrojo/casestudypilot/issues"
Documentation = "https://github.com/castrojo/casestudypilot#readme"

[project.scripts]
casestudypilot = "casestudypilot.__main__:app"

[tool.setuptools]
packages = ["casestudypilot", "casestudypilot.tools"]

[tool.setuptools.package-data]
casestudypilot = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["casestudypilot"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["casestudypilot"]
